# janssasskernel

./: README.md  pyproject.toml
example/: example.ipynb
janssasskernel/: kernel.json
src/janssasskernel/: __main__.py  install_kernelspec.py  kernel.py
